apps/production/weave-gitops/ingress-tls-letsenc.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weave-gitops-prod
  namespace: flux-system
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ui-flux.prod.ftscode.de
      secretName: ui-flux-prod-tls
  rules:
  - host: ui-flux.prod.ftscode.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: weave-gitops
            port:
              number: 9001
